fix:handle exception for others